feat(the-beginning-section): Implement the section background and title

--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
     <title>Scroll Scape</title>
   </head>
   <body>
-      <header>
-          <p id="logo">SCROLL SCAPE</p>
-      <p id="header-title">WELCOME TO MY WEB DEV JOURNEY</p>
-      <p id="header-tagline">A scroll through my journey — Not perfect, not finished, but this is where it begins.</p>
+    <header>
+      <p id="logo">SCROLL SCAPE</p>
+      <h1 id="header-title" class="title">WELCOME TO MY WEB DEV JOURNEY</h1>
+      <p id="header-tagline">
+        A scroll through my journey — Not perfect, not finished, but this is
+        where it begins.
+      </p>
       <div id="lottie-container"></div>
       <div class="social-links">
         <a href="#">
@@ -28,10 +31,14 @@
         </a>
       </div>
     </header>
-    <main class="content">
-      <p>Scroll to see the header shrink...</p>
-    </main>
-
+    <section class="the-beginning-section">
+      <h1 class="the-beginning-title title">THE BEGINNING</h1>
+      <div class="sky">
+        <img src="static/images/main/cloud.png" alt="cloud" class="cloud" />
+      </div>
+      <div class="sky-bg"></div>
+    </section>
+    <div style="height: 100vh; background-color: #8b8585;"></div>
     <script src="js/script.js"></script>
     <script src="js/lottie.js"></script>
   </body>
