feat(Section3-The Struggles): Implement Section 3

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <title>Scroll Scape</title>
   </head>
   <body>
+    <!-- Section 1 -->
     <header class="section" id="section1">
       <p id="logo">SCROLL SCAPE</p>
       <h1 id="section1-title" class="title">WELCOME TO MY WEB DEV JOURNEY</h1>
@@ -28,12 +29,15 @@
         <a href="https://github.com/aqeel-sheikh/">
           <img src="static/images/social/github.svg" alt="Github" />
         </a>
-        <a href="https://mail.google.com/mail/?view=cm&fs=1&to=sheikhakeelw01@gmail.com&su=Opportunity%20to%20Collaborate%20%2F%20Hire&body=Hello%20Aqeel,%0D%0A%0D%0AI%20came%20across%20your%20profile%20and%20I%20am%20interested%20in%20discussing%20a%20potential%20opportunity%20with%20you.%0D%0A%0D%0APlease%20let%20me%20know%20a%20convenient%20time%20to%20connect.%0D%0A%0D%0AThank%20you,%0D%0A[Your%20Name]%0D%0A[Your%20Company/Organization]" target="_blank">
+        <a
+          href="https://mail.google.com/mail/?view=cm&fs=1&to=sheikhakeelw01@gmail.com&su=Opportunity%20to%20Collaborate%20%2F%20Hire&body=Hello%20Aqeel,%0D%0A%0D%0AI%20came%20across%20your%20profile%20and%20I%20am%20interested%20in%20discussing%20a%20potential%20opportunity%20with%20you.%0D%0A%0D%0APlease%20let%20me%20know%20a%20convenient%20time%20to%20connect.%0D%0A%0D%0AThank%20you,%0D%0A[Your%20Name]%0D%0A[Your%20Company/Organization]"
+          target="_blank"
+        >
           <img src="static/images/social/gmail.svg" alt="Gmail" />
         </a>
       </div>
     </header>
-
+    <!-- Section 2 -->
     <section class="section" id="section2">
       <h1 class="title" id="section2-title">THE BEGINNING</h1>
       <div class="lines">
@@ -46,12 +50,46 @@
           code, a little patience, and the journey was set in motion.
         </p>
       </div>
-      <div class="sky-bg"></div>
     </section>
-
-    <div style="height: 100vh" class="section">
-      <div class="test"></div>
-    </div>
+    <!-- Section 3 -->
+    <section class="section" id="section3">
+      <div class="" id="section3-content">
+        <div id="section3-heading">
+          <h1 class="title" id="section3-title">THE STRUGGLES</h1>
+          <p id="section3-tagline">
+            > Error: Missing patience.js <br />
+            > Error: Confidence not defined
+          </p>
+        </div>
+        <div class="narrative-card">
+          <p class="narrative-line narrative-line1">
+            <span class="narrative-title">It wasn't easy.</span><br />
+            <span
+              >I battled self-doubt, endless errors, and nights that felt like
+              failures.</span
+            >
+            <br />
+            <span> More than once, I thought about giving up.</span>
+          </p>
+        </div>
+        <div class="card card1">Self-doubt</div>
+        <div class="card card2">Overthinking</div>
+        <div class="card card3">Pressure</div>
+        <div class="card card4">Burnout nights</div>
+        <div class="card card5">Impostor syndrome</div>
+        <div class="card card6">Fear</div>
+        <div class="card card7">Confusion</div>
+        <div class="card card8">Loneliness</div>
+        <div class="card card9">Mistakes</div>
+        <div class="card card10">Comparison</div>
+        <div class="card card11">Struggle</div>
+        <div class="card card12">Rejection</div>
+        <div class="card card13">Staring at blank screens</div>
+        <div class="card card14">“Why isn't this working?!” moments</div>
+        <div class="card card15">Depression</div>
+      </div>
+    </section>
+    
     <script src="js/script.js"></script>
     <script src="js/lottie.js"></script>
     <script src="js/animation.js"></script>
