feat(sections): restructure sections and enhance styling for better layout and readability

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Section 1 -->
     <header class="section" id="section1">
       <p id="logo">SCROLL SCAPE</p>
-      <h1 id="section1-title" class="title">WELCOME TO MY WEB DEV JOURNEY</h1>
+      <h1 class="title" id="section1-title">WELCOME TO MY WEB DEV JOURNEY</h1>
       <p id="section1-tagline">
         A scroll through my journey — Not perfect, not finished, but this is
         where it begins.
@@ -39,57 +39,70 @@
     </header>
     <!-- Section 2 -->
     <section class="section" id="section2">
-      <h1 class="title" id="section2-title">THE BEGINNING</h1>
-      <div class="lines">
-        <div class="line line1"></div>
-        <div class="line line2"></div>
+      <div class="section-heading" id="section2-heading">
+        <h1 class="title" id="section2-title">THE BEGINNING</h1>
       </div>
-      <div id="section2-content">
-        <p id="section2-content-text">
-          I didn't know where it would lead — I just started. A few lines of
+        <div class="decoration-line decoration-line-red"></div>
+        <div class="decoration-line decoration-line-blue"></div>
+      <div class="narrative-card" id="section2-narrative-card">
+        <p class="narrative-card-text" id="section2-narrative-card-text">
+          I didn't know where it would lead — I just started. <br>A few lines of
           code, a little patience, and the journey was set in motion.
         </p>
       </div>
     </section>
     <!-- Section 3 -->
     <section class="section" id="section3">
-      <div class="" id="section3-content">
-        <div id="section3-heading">
-          <h1 class="title" id="section3-title">THE STRUGGLES</h1>
-          <p id="section3-tagline">
-            > Error: Missing patience.js <br />
-            > Error: Confidence not defined
-          </p>
-        </div>
-        <div class="narrative-card">
-          <p class="narrative-line narrative-line1">
-            <span class="narrative-title">It wasn't easy.</span><br />
-            <span
-              >I battled self-doubt, endless errors, and nights that felt like
-              failures.</span
-            >
-            <br />
-            <span> More than once, I thought about giving up.</span>
-          </p>
-        </div>
-        <div class="card card1">Self-doubt</div>
-        <div class="card card2">Overthinking</div>
-        <div class="card card3">Pressure</div>
-        <div class="card card4">Burnout nights</div>
-        <div class="card card5">Impostor syndrome</div>
-        <div class="card card6">Fear</div>
-        <div class="card card7">Confusion</div>
-        <div class="card card8">Loneliness</div>
-        <div class="card card9">Mistakes</div>
-        <div class="card card10">Comparison</div>
-        <div class="card card11">Struggle</div>
-        <div class="card card12">Rejection</div>
-        <div class="card card13">Staring at blank screens</div>
-        <div class="card card14">“Why isn't this working?!” moments</div>
-        <div class="card card15">Depression</div>
+      <div class="section-heading" id="section3-heading">
+        <h1 class="title" id="section3-title">THE STRUGGLES</h1>
+        <p class="tagline" id="section3-tagline">
+          > Error: Missing patience.js <br />
+          > Error: Confidence not defined
+        </p>
       </div>
+
+      <div class="narrative-card" id="section3-narrative-card">
+        <p class="narrative-card-text" id="section3-narrative-card-text">
+          <span class="narrative-title">It wasn't easy.</span><br />
+          <span
+            >I battled self-doubt, endless errors, and nights that felt like
+            failures.</span
+          >
+          <br />
+          <span> More than once, I thought about giving up.</span>
+        </p>
+      </div>
+
+      <div class="card card1">Self-doubt</div>
+      <div class="card card2">Overthinking</div>
+      <div class="card card3">Pressure</div>
+      <div class="card card4">Burnout nights</div>
+      <div class="card card5">Impostor syndrome</div>
+      <div class="card card6">Fear</div>
+      <div class="card card7">Confusion</div>
+      <div class="card card8">Loneliness</div>
+      <div class="card card9">Mistakes</div>
+      <div class="card card10">Comparison</div>
+      <div class="card card11">Struggle</div>
+      <div class="card card12">Rejection</div>
+      <div class="card card13">Staring at blank screens</div>
+      <div class="card card14">“Why isn't this working?!” moments</div>
+      <div class="card card15">Depression</div>
     </section>
-    
+
+    <!-- Section 4 -->
+    <section class="section" id="section4">
+
+      <div class="section-heading" id="section4-heading">
+        <h1 class="title" id="section4-title">THE RISE</h1>
+        <p class="tagline" id="section4-tagline">
+          > Error fixed: patience.js <br />
+          > Confidence redefined <br />
+          > Growth compiled
+        </p>
+      </div>
+
+    </section>
     <script src="js/script.js"></script>
     <script src="js/lottie.js"></script>
     <script src="js/animation.js"></script>
