feat(sections): update narrative content and enhance section 4 styling with animations

--- a/index.html
+++ b/index.html
@@ -42,12 +42,14 @@
       <div class="section-heading" id="section2-heading">
         <h1 class="title" id="section2-title">THE BEGINNING</h1>
       </div>
-        <div class="decoration-line decoration-line-red"></div>
-        <div class="decoration-line decoration-line-blue"></div>
+      <div class="decoration-line decoration-line-red"></div>
+      <div class="decoration-line decoration-line-blue"></div>
       <div class="narrative-card" id="section2-narrative-card">
         <p class="narrative-card-text" id="section2-narrative-card-text">
-          I didn't know where it would lead — I just started. <br>A few lines of
-          code, a little patience, and the journey was set in motion.
+          I didn't know where to start. <br />
+          For a while, I was just trying random things online, hoping something
+          would click. <br />
+          So I went back to what always made sense to me: computers.
         </p>
       </div>
     </section>
@@ -63,11 +65,12 @@
 
       <div class="narrative-card" id="section3-narrative-card">
         <p class="narrative-card-text" id="section3-narrative-card-text">
-          <span class="narrative-title">It wasn't easy.</span><br />
-          <span
-            >I battled self-doubt, endless errors, and nights that felt like
-            failures.</span
-          >
+          <span class="narrative-title">It was neither smooth nor easy.</span
+          ><br />
+          <span>
+            I doubted myself, got stuck on small things, and spent nights
+            feeling like I was getting nowhere.
+          </span>
           <br />
           <span> More than once, I thought about giving up.</span>
         </p>
@@ -92,16 +95,35 @@
 
     <!-- Section 4 -->
     <section class="section" id="section4">
-
       <div class="section-heading" id="section4-heading">
         <h1 class="title" id="section4-title">THE RISE</h1>
-        <p class="tagline" id="section4-tagline">
-          > Error fixed: patience.js <br />
-          > Confidence redefined <br />
-          > Growth compiled
+        <p class="tagline section4-tagline section4-tagline1">> Growth compiled</p>
+        <p class="tagline section4-tagline section4-tagline2">> Confidence redefined</p>
+        <p class="tagline section4-tagline section4-tagline3">> Error fixed: patience.js</p>
+      </div>
+      <div class="narrative-card" id="section4-narrative-card">
+        <p class="narrative-card-text" id="section4-narrative-card-text">
+          <span class="narrative-title"
+            >After all those struggles, I finally started moving forward.</span
+          ><br />
+          <span> Slowly, things began to make sense. </span>
+          <br />
+          <span>
+            Not a big breakthrough, just small wins that kept me going.</span
+          >
         </p>
       </div>
 
+      <div class="card Rcard1">Consistency</div>
+      <div class="card Rcard2">Focus</div>
+      <div class="card Rcard3">First small win</div>
+      <div class="card Rcard4">Learning mindset</div>
+      <div class="card Rcard5">Discipline</div>
+      <div class="card Rcard6">Curosity</div>
+      <!-- <div class="card Rcard7">Resilience</div> -->
+      <div class="card Rcard7">Progress</div>
+      <div class="card Rcard8">Confidence</div>
+      <div class="card Rcard9">"It finally works!"</div>
     </section>
     <script src="js/script.js"></script>
     <script src="js/lottie.js"></script>
