feat(section2): enhance narrative-card content and improve styling for better readability

--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
       <div class="decoration-line decoration-line-blue"></div>
       <div class="narrative-card" id="section2-narrative-card">
         <p class="narrative-card-text" id="section2-narrative-card-text">
-          I didn't know where to start. <br />
+        <strong>I didn't know where to start.</strong> <br />
           For a while, I was just trying random things online, hoping something
           would click. <br />
-          So I went back to what always made sense to me: computers.
+          So I went back to what always made sense to me: COMPUTERS.
         </p>
       </div>
     </section>
@@ -76,30 +76,36 @@
         </p>
       </div>
 
-      <div class="card card1">Self-doubt</div>
-      <div class="card card2">Overthinking</div>
-      <div class="card card3">Pressure</div>
-      <div class="card card4">Burnout nights</div>
-      <div class="card card5">Impostor syndrome</div>
-      <div class="card card6">Fear</div>
-      <div class="card card7">Confusion</div>
-      <div class="card card8">Loneliness</div>
-      <div class="card card9">Mistakes</div>
-      <div class="card card10">Comparison</div>
-      <div class="card card11">Struggle</div>
-      <div class="card card12">Rejection</div>
-      <div class="card card13">Staring at blank screens</div>
-      <div class="card card14">“Why isn't this working?!” moments</div>
-      <div class="card card15">Depression</div>
+      <p class="card card1">Self-doubt</p>
+      <p class="card card2">Overthinking</p>
+      <p class="card card3">Pressure</p>
+      <p class="card card4">Burnout nights</p>
+      <p class="card card5">Impostor syndrome</p>
+      <p class="card card6">Fear</p>
+      <p class="card card7">Confusion</p>
+      <p class="card card8">Loneliness</p>
+      <p class="card card9">Mistakes</p>
+      <p class="card card10">Comparison</p>
+      <p class="card card11">Struggle</p>
+      <p class="card card12">Rejection</p>
+      <p class="card card13">Staring at blank screens</p>
+      <p class="card card14">“Why isn't this working?!” moments</p>
+      <p class="card card15">Depression</p>
     </section>
 
     <!-- Section 4 -->
     <section class="section" id="section4">
       <div class="section-heading" id="section4-heading">
         <h1 class="title" id="section4-title">THE RISE</h1>
-        <p class="tagline section4-tagline section4-tagline1">> Growth compiled</p>
-        <p class="tagline section4-tagline section4-tagline2">> Confidence redefined</p>
-        <p class="tagline section4-tagline section4-tagline3">> Error fixed: patience.js</p>
+        <p class="tagline section4-tagline section4-tagline1">
+          > Growth compiled
+        </p>
+        <p class="tagline section4-tagline section4-tagline2">
+          > Confidence redefined
+        </p>
+        <p class="tagline section4-tagline section4-tagline3">
+          > Error fixed: patience.js
+        </p>
       </div>
       <div class="narrative-card" id="section4-narrative-card">
         <p class="narrative-card-text" id="section4-narrative-card-text">
@@ -114,17 +120,31 @@
         </p>
       </div>
 
-      <div class="card Rcard1">Consistency</div>
-      <div class="card Rcard2">Focus</div>
-      <div class="card Rcard3">First small win</div>
-      <div class="card Rcard4">Learning mindset</div>
-      <div class="card Rcard5">Discipline</div>
-      <div class="card Rcard6">Curosity</div>
-      <!-- <div class="card Rcard7">Resilience</div> -->
-      <div class="card Rcard7">Progress</div>
-      <div class="card Rcard8">Confidence</div>
-      <div class="card Rcard9">"It finally works!"</div>
+      <p class="card Rcard1">Consistency</p>
+      <p class="card Rcard2">Focus</p>
+      <p class="card Rcard3">First small win</p>
+      <p class="card Rcard4">Learning mindset</p>
+      <p class="card Rcard9">"It finally works!"</p>
+      <p class="card Rcard5">Discipline</p>
+      <p class="card Rcard6">Curosity</p>
+      <p class="card Rcard7">Progress</p>
+      <p class="card Rcard8">Confidence</p>
     </section>
+
+    <section class="section" id="section5">
+      <div class="section-heading" id="section4-heading">
+        <h1 class="title" id="section4-title">THE VISION</h1>
+      </div>
+      <div class="narrative-card" id="section4-narrative-card">
+        <p class="narrative-card-text" id="section4-narrative-card-text">
+          I don't have all the answers yet. But I know one thing — I'll keep
+          learning, building, and moving forward. For me, this isn't just about
+          coding. It's about freedom. About creating something that lasts. This
+          is where I'm heading — my vision
+        </p>
+      </div>
+    </section>
+    
     <script src="js/script.js"></script>
     <script src="js/lottie.js"></script>
     <script src="js/animation.js"></script>
