feat(sections): Implement Gsap scroll animation

--- a/index.html
+++ b/index.html
@@ -37,117 +37,122 @@
         </a>
       </div>
     </header>
-    <!-- Section 2 -->
-    <section class="section" id="section2">
-      <div class="section-heading" id="section2-heading">
-        <h1 class="title" id="section2-title">THE BEGINNING</h1>
-      </div>
-      <div class="decoration-line decoration-line-red"></div>
-      <div class="decoration-line decoration-line-blue"></div>
-      <div class="narrative-card" id="section2-narrative-card">
-        <p class="narrative-card-text" id="section2-narrative-card-text">
-        <strong>I didn't know where to start.</strong> <br />
-          For a while, I was just trying random things online, hoping something
-          would click. <br />
-          So I went back to what always made sense to me: COMPUTERS.
-        </p>
-      </div>
-    </section>
-    <!-- Section 3 -->
-    <section class="section" id="section3">
-      <div class="section-heading" id="section3-heading">
-        <h1 class="title" id="section3-title">THE STRUGGLES</h1>
-        <p class="tagline" id="section3-tagline">
-          > Error: Missing patience.js <br />
-          > Error: Confidence not defined
-        </p>
-      </div>
+    <div class="wrapper">
+      <!-- Section 2 -->
+      <section class="section" id="section2">
+        <div class="section-heading" id="section2-heading">
+          <h1 class="title" id="section2-title">THE BEGINNING</h1>
+        </div>
+        <div class="decoration-line decoration-line-red"></div>
+        <div class="decoration-line decoration-line-blue"></div>
+        <div class="narrative-card" id="section2-narrative-card">
+          <p class="narrative-card-text" id="section2-narrative-card-text">
+            <strong>I didn't know where to start.</strong> <br />
+            For a while, I was just trying random things online, hoping
+            something would click. <br />
+            So I went back to what always made sense to me: COMPUTERS.
+          </p>
+        </div>
+      </section>
+      <!-- Section 3 -->
+      <section class="section scrollPanel" id="section3">
+        <div class="section-heading" id="section3-heading">
+          <h1 class="title" id="section3-title">THE STRUGGLES</h1>
+          <p class="tagline" id="section3-tagline">
+            > Error: Missing patience.js <br />
+            > Error: Confidence not defined
+          </p>
+        </div>
 
-      <div class="narrative-card" id="section3-narrative-card">
-        <p class="narrative-card-text" id="section3-narrative-card-text">
-          <span class="narrative-title">It was neither smooth nor easy.</span
-          ><br />
-          <span>
-            I doubted myself, got stuck on small things, and spent nights
-            feeling like I was getting nowhere.
-          </span>
-          <br />
-          <span> More than once, I thought about giving up.</span>
-        </p>
-      </div>
+        <div class="narrative-card" id="section3-narrative-card">
+          <p class="narrative-card-text" id="section3-narrative-card-text">
+            <span class="narrative-title">It was neither smooth nor easy.</span
+            ><br />
+            <span>
+              I doubted myself, got stuck on small things, and spent nights
+              feeling like I was getting nowhere.
+            </span>
+            <br />
+            <span> More than once, I thought about giving up.</span>
+          </p>
+        </div>
 
-      <p class="card card1">Self-doubt</p>
-      <p class="card card2">Overthinking</p>
-      <p class="card card3">Pressure</p>
-      <p class="card card4">Burnout nights</p>
-      <p class="card card5">Impostor syndrome</p>
-      <p class="card card6">Fear</p>
-      <p class="card card7">Confusion</p>
-      <p class="card card8">Loneliness</p>
-      <p class="card card9">Mistakes</p>
-      <p class="card card10">Comparison</p>
-      <p class="card card11">Struggle</p>
-      <p class="card card12">Rejection</p>
-      <p class="card card13">Staring at blank screens</p>
-      <p class="card card14">“Why isn't this working?!” moments</p>
-      <p class="card card15">Depression</p>
-    </section>
+        <p class="card card1">Self-doubt</p>
+        <p class="card card2">Overthinking</p>
+        <p class="card card3">Pressure</p>
+        <p class="card card4">Burnout nights</p>
+        <p class="card card5">Impostor syndrome</p>
+        <p class="card card6">Fear</p>
+        <p class="card card7">Confusion</p>
+        <p class="card card8">Loneliness</p>
+        <p class="card card9">Mistakes</p>
+        <p class="card card10">Comparison</p>
+        <p class="card card11">Struggle</p>
+        <p class="card card12">Rejection</p>
+        <p class="card card13">Staring at blank screens</p>
+        <p class="card card14">“Why isn't this working?!” moments</p>
+        <p class="card card15">Depression</p>
+      </section>
 
-    <!-- Section 4 -->
-    <section class="section" id="section4">
-      <div class="section-heading" id="section4-heading">
-        <h1 class="title" id="section4-title">THE RISE</h1>
-        <p class="tagline section4-tagline section4-tagline1">
-          > Growth compiled
-        </p>
-        <p class="tagline section4-tagline section4-tagline2">
-          > Confidence redefined
-        </p>
-        <p class="tagline section4-tagline section4-tagline3">
-          > Error fixed: patience.js
-        </p>
-      </div>
-      <div class="narrative-card" id="section4-narrative-card">
-        <p class="narrative-card-text" id="section4-narrative-card-text">
-          <span class="narrative-title"
-            >After all those struggles, I finally started moving forward.</span
-          ><br />
-          <span> Slowly, things began to make sense. </span>
-          <br />
-          <span>
-            Not a big breakthrough, just small wins that kept me going.</span
-          >
-        </p>
-      </div>
+      <!-- Section 4 -->
+      <section class="section scrollPanel" id="section4">
+        <div class="section-heading" id="section4-heading">
+          <h1 class="title" id="section4-title">THE RISE</h1>
+          <p class="tagline section4-tagline section4-tagline1">
+            > Growth compiled
+          </p>
+          <p class="tagline section4-tagline section4-tagline2">
+            > Confidence redefined
+          </p>
+          <p class="tagline section4-tagline section4-tagline3">
+            > Error fixed: patience.js
+          </p>
+        </div>
+        <div class="narrative-card" id="section4-narrative-card">
+          <p class="narrative-card-text" id="section4-narrative-card-text">
+            <span class="narrative-title"
+              >After all those struggles, I finally started moving
+              forward.</span
+            ><br />
+            <span> Slowly, things began to make sense. </span>
+            <br />
+            <span>
+              Not a big breakthrough, just small wins that kept me going.</span
+            >
+          </p>
+        </div>
 
-      <p class="card Rcard1">Consistency</p>
-      <p class="card Rcard2">Focus</p>
-      <p class="card Rcard3">First small win</p>
-      <p class="card Rcard4">Learning mindset</p>
-      <p class="card Rcard9">"It finally works!"</p>
-      <p class="card Rcard5">Discipline</p>
-      <p class="card Rcard6">Curosity</p>
-      <p class="card Rcard7">Progress</p>
-      <p class="card Rcard8">Confidence</p>
-    </section>
+        <p class="card Rcard1">Consistency</p>
+        <p class="card Rcard2">Focus</p>
+        <p class="card Rcard3">First small win</p>
+        <p class="card Rcard4">Learning mindset</p>
+        <p class="card Rcard9">"It finally works!"</p>
+        <p class="card Rcard5">Discipline</p>
+        <p class="card Rcard6">Curosity</p>
+        <p class="card Rcard7">Progress</p>
+        <p class="card Rcard8">Confidence</p>
+      </section>
 
-    <!-- Section 5 -->
-    <section class="section" id="section5">
-      <div class="section-heading" id="section5-heading">
-        <h1 class="title" id="section5-title">THE VISION</h1>
-      </div>
-      <div class="narrative-card" id="section5-narrative-card">
-        <p class="narrative-card-text" id="section5-narrative-card-text">
-          I don't have all the answers yet. But I know one thing — I'll keep
-          learning, building, and moving forward. For me, this isn't just about
-          coding. It's about freedom. About creating something that lasts. This
-          is where I'm heading — my vision
-        </p>
-      </div>
-    </section>
+      <!-- Section 5 -->
+      <section class="section scrollPanel" id="section5">
+        <div class="section-heading" id="section5-heading">
+          <h1 class="title" id="section5-title">THE VISION</h1>
+        </div>
+        <div class="narrative-card" id="section5-narrative-card">
+          <p class="narrative-card-text" id="section5-narrative-card-text">
+            I don't have all the answers yet. But I know one thing — I'll keep
+            learning, building, and moving forward. For me, this isn't just
+            about coding. It's about freedom. About creating something that
+            lasts. This is where I'm heading — my vision
+          </p>
+        </div>
+      </section>
+    </div>
     
-    <script src="js/script.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
     <script src="js/lottie.js"></script>
     <script src="js/animation.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
