refactor(section3): Enhance background, cards, narrative cards with improved styling and animations

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <div class="narrative-card" id="section3-narrative-card">
           <p class="narrative-card-text" id="section3-narrative-card-text">
-            <span class="narrative-title">It was neither smooth nor easy.</span
+            <span class="narrative-title"><strong>It was neither Smooth nor Easy.</strong></span
             ><br />
             <span>
               I doubted myself, got stuck on small things, and spent nights
@@ -76,22 +76,23 @@
             <span> More than once, I thought about giving up.</span>
           </p>
         </div>
-
-        <p class="card card1">Self-doubt</p>
-        <p class="card card2">Overthinking</p>
-        <p class="card card3">Pressure</p>
-        <p class="card card4">Burnout nights</p>
-        <p class="card card5">Impostor syndrome</p>
-        <p class="card card6">Fear</p>
-        <p class="card card7">Confusion</p>
-        <p class="card card8">Loneliness</p>
-        <p class="card card9">Mistakes</p>
-        <p class="card card10">Comparison</p>
-        <p class="card card11">Struggle</p>
-        <p class="card card12">Rejection</p>
-        <p class="card card13">Staring at blank screens</p>
-        <p class="card card14">“Why isn't this working?!” moments</p>
-        <p class="card card15">Depression</p>
+        <p class="card card1"><span>Self-doubt</span></p>
+        <p class="card card2"><span>Overthinking</span></p>
+        <p class="card card3"><span>Pressure</span></p>
+        <p class="card card4"><span>Burnout nights</span></p>
+        <p class="card card5"><span>Impostor syndrome</span></p>
+        <p class="card card6"><span>Fear</span></p>
+        <p class="card card7"><span>Confusion</span></p>
+        <p class="card card8"><span>Loneliness</span></p>
+        <p class="card card9"><span>Mistakes</span></p>
+        <p class="card card10"><span>Comparison</span></p>
+        <p class="card card11"><span>Struggle</span></p>
+        <p class="card card12"><span>Rejection</span></p>
+        <p class="card card13"><span>Staring at blank screens</span></p>
+        <p class="card card14">
+          <span>“Why isn't this working?!” moments</span>
+        </p>
+        <p class="card card15"><span>Depression</span></p>
       </section>
 
       <!-- Section 4 -->
@@ -122,15 +123,15 @@
           </p>
         </div>
 
-        <p class="card Rcard1">Consistency</p>
-        <p class="card Rcard2">Focus</p>
-        <p class="card Rcard3">First small win</p>
-        <p class="card Rcard4">Learning mindset</p>
-        <p class="card Rcard9">"It finally works!"</p>
-        <p class="card Rcard5">Discipline</p>
-        <p class="card Rcard6">Curosity</p>
-        <p class="card Rcard7">Progress</p>
-        <p class="card Rcard8">Confidence</p>
+        <p class="card Rcard1"><span>Consistency</span></p>
+        <p class="card Rcard2"><span>Focus</span></p>
+        <p class="card Rcard3"><span>First small win</span></p>
+        <p class="card Rcard4"><span>Learning mindset</span></p>
+        <p class="card Rcard9"><span>"It finally works!"</span></p>
+        <p class="card Rcard5"><span>Discipline</span></p>
+        <p class="card Rcard6"><span>Curosity</span></p>
+        <p class="card Rcard7"><span>Progress</span></p>
+        <p class="card Rcard8"><span>Confidence</span></p>
       </section>
 
       <!-- Section 5 -->
@@ -148,7 +149,7 @@
         </div>
       </section>
     </div>
-    
+
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
     <script src="js/lottie.js"></script>
