--- a/index.html
+++ b/index.html
@@ -66,7 +66,8 @@
 
         <div class="narrative-card" id="section3-narrative-card">
           <p class="narrative-card-text" id="section3-narrative-card-text">
-            <span class="narrative-title"><strong>It was neither Smooth nor Easy.</strong></span
+            <span class="narrative-title"
+              ><strong>It was neither Smooth nor Easy.</strong></span
             ><br />
             <span>
               I doubted myself, got stuck on small things, and spent nights
@@ -112,8 +113,8 @@
         <div class="narrative-card" id="section4-narrative-card">
           <p class="narrative-card-text" id="section4-narrative-card-text">
             <span class="narrative-title"
-              >After all those struggles, I finally started moving
-              forward.</span
+              >After all those struggles,
+              <strong>I finally started moving forward.</strong></span
             ><br />
             <span> Slowly, things began to make sense. </span>
             <br />
@@ -135,7 +136,7 @@
       </section>
 
       <!-- Section 5 -->
-      <section class="section scrollPanel" id="section5">
+       <section class="section scrollPanel" id="section5">
         <div class="section-heading" id="section5-heading">
           <h1 class="title" id="section5-title">THE VISION</h1>
         </div>
@@ -147,9 +148,8 @@
             lasts. This is where I'm heading — my vision
           </p>
         </div>
-      </section>
+      </section> 
     </div>
-
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/ScrollTrigger.min.js"></script>
     <script src="js/lottie.js"></script>
